<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dedupendnote.edu</groupId>
	<artifactId>DedupEndNote</artifactId>
	<version>0.9.7b-SNAPSHOT</version>

	<name>DedupEndNote</name>
	<description>Deduplicates EndNote export file in RIS format</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>21</java.version> 
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- 
			See https://issues.apache.org/jira/browse/TEXT-104 for bug in JaroWinklerDistance (returns the JaroWinklerSimilarity). JaroWinklerSimilarity in 1.8 is correct. 
		-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.10.0</version>
		</dependency>
		<!--
			https://github.com/tdebatty/java-string-similarity has an implentation of Ratcliff-Obershelp.
			Used in test JaroWinklerAbstracttextTest to compare it to JaroWinkler.
			This library also has a JaroWinkler implementation. This one is NOT used.
			
			FIXME: If this isn't useful for abstracts, remove this dependency
		 -->
		<dependency>
		    <groupId>info.debatty</groupId>
		    <artifactId>java-string-similarity</artifactId>
		    <version>2.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<scope>test</scope>
		</dependency>		
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.java-diff-utils</groupId>
			<artifactId>java-diff-utils</artifactId>
			<version>4.15</version>
			<scope>test</scope>
		</dependency>
		<!--  
			webjars
			
			zie http://www.webjars.org/documentation
			zie: https://springframework.guru/spring-boot-web-application-part-2-using-thymeleaf/
		-->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>webjars-locator-lite</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>bootstrap</artifactId>
		    <version>4.5.3</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jquery</artifactId>
		    <version>3.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery-ui</artifactId>
			<version>1.13.2</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars.bowergithub.blueimp</groupId>
		    <artifactId>jquery-file-upload</artifactId>
		    <version>10.31.0</version>
		</dependency>
		<dependency>
			<groupId>org.webjars.npm</groupId>
			<artifactId>sockjs-client</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>stomp-websocket</artifactId>
			<version>2.3.4</version>
		</dependency>
		<!-- END OF webjars -->

	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
		        <groupId>org.openrewrite.maven</groupId>
		        <artifactId>rewrite-maven-plugin</artifactId>
		        <version>6.11.0</version>
				<configuration>
					<exportDatatables>true</exportDatatables>
					<activeRecipes>
<!--						<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_4</recipe>-->
						<!-- recipe for spring boot 3.5 errors out (because it is the first recipe from io.moderne? -->
						 <recipe>io.moderne.java.spring.boot3.UpgradeSpringBoot_3_5</recipe>
					</activeRecipes>
					<exclusions>
						<exclusion>${project.basedir}/upload-dir/**</exclusion>
					</exclusions>
				</configuration>
		        <dependencies>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-spring</artifactId>
		            <version>6.8.2</version>
		          </dependency>
		          <dependency>
		            <groupId>io.moderne.recipe</groupId>
		            <artifactId>rewrite-spring</artifactId>
		            <version>0.7.2</version>
		          </dependency>
		        </dependencies>
		      </plugin>
   		</plugins>
	</build>
</project>
